advantages adaptation finished

--- a/index.html
+++ b/index.html
@@ -71,24 +71,22 @@
         </address>
       </div>
     </header>
-    <!-- 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
-
+      </section> -->
       <section class="section">
         <div class="container">
           <h2 class="hidden">Advantages</h2>
           <ul class="advantages">
             <li class="advantage-item">
               <div class="advantage-icon-field">
-                <svg width="64" height="64">
+                <svg width="64" height="64" class="advantage-icon">
                   <use href="./images/icons/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -100,7 +98,7 @@
             </li>
             <li class="advantage-item">
               <div class="advantage-icon-field">
-                <svg width="64" height="64">
+                <svg width="64" height="64" class="advantage-icon">
                   <use href="./images/icons/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -112,7 +110,7 @@
             </li>
             <li class="advantage-item">
               <div class="advantage-icon-field">
-                <svg width="64" height="64">
+                <svg width="64" height="64" class="advantage-icon">
                   <use href="./images/icons/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -124,7 +122,7 @@
             </li>
             <li class="advantage-item">
               <div class="advantage-icon-field">
-                <svg width="64" height="64">
+                <svg width="64" height="64" class="advantage-icon">
                   <use href="./images/icons/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -138,7 +136,7 @@
         </div>
       </section>
 
-      <section class="section no-padding">
+      <section class="section no-padding adapt-hidden-section">
         <div class="container">
           <h2 class="direction-title section-title">What are we doing</h2>
           <ul class="direction">
@@ -636,7 +634,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
