adapt for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
       </div>
     </header>
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <section class="section">
         <div class="container">
           <h2 class="hidden">Advantages</h2>
@@ -138,7 +138,7 @@
 
       <section class="section no-padding adapt-hidden-section">
         <div class="container">
-          <h2 class="direction-title section-title">What are we doing</h2>
+          <h2 class="section-title">What are we doing</h2>
           <ul class="direction">
             <li class="image-item">
               <img
