--- a/index.html
+++ b/index.html
@@ -141,25 +141,51 @@
           <h2 class="section-title">What are we doing</h2>
           <ul class="direction">
             <li class="image-item">
-              <img
-                src="./images/what-are-we-doing/img1.jpg"
-                alt="computer`s screen"
-                width="360"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/what-are-we-doing/computer.jpg    1x,
+                    ./images/what-are-we-doing/computer@2x.jpg 2x
+                  "
+                />
+
+                <img
+                  src="./images/what-are-we-doing/computer.jpg"
+                  alt="computer`s screen"
+                  width="360"
+                />
+              </picture>
             </li>
             <li class="image-item">
-              <img
-                src="./images/what-are-we-doing/img2.jpg"
-                alt="smartphone`s screen"
-                width="360"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/what-are-we-doing/phone.jpg    1x,
+                    ./images/what-are-we-doing/phone@2x.jpg 2x
+                  "
+                />
+
+                <img
+                  src="./images/what-are-we-doing/phone.jpg"
+                  alt="smartphone`s screen"
+                  width="360"
+                />
+              </picture>
             </li>
             <li class="image-item">
-              <img
-                src="./images/what-are-we-doing/img3.jpg"
-                alt="laptop`s and computer`s screens"
-                width="360"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/what-are-we-doing/laptop.jpg    1x,
+                    ./images/what-are-we-doing/laptop@2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/what-are-we-doing/laptop.jpg"
+                  alt="laptop`s and computer`s screens"
+                  width="360"
+                />
+              </picture>
             </li>
           </ul>
         </div>
@@ -170,12 +196,21 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-members">
             <li class="team-card">
-              <img
-                src="./images/our-team/mark-guerrero.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/mark-guerrero.jpg    1x,
+                    ./images/our-team/mark-guerrero@2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/our-team/mark-guerrero.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-card-bottom">
                 <h3 class="team-names">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
@@ -242,12 +277,21 @@
               </div>
             </li>
             <li class="team-card">
-              <img
-                src="./images/our-team/tom-ford.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/tom-ford.jpg    1x,
+                    ./images/our-team/tom-ford@2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/our-team/tom-ford.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-card-bottom">
                 <h3 class="team-names">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
@@ -314,12 +358,21 @@
               </div>
             </li>
             <li class="team-card">
-              <img
-                src="./images/our-team/camila-garcia.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/camila-garcia.jpg    1x,
+                    ./images/our-team/camila-garcia@2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/our-team/camila-garcia.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-card-bottom">
                 <h3 class="team-names">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
@@ -386,12 +439,21 @@
               </div>
             </li>
             <li class="team-card">
-              <img
-                src="./images/our-team/daniel-wilson.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/daniel-wilson.jpg    1x,
+                    ./images/our-team/daniel-wilson@2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/our-team/daniel-wilson.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-card-bottom">
                 <h3 class="team-names">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
