--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,21 @@
           <a href="./index.html" class="logo">
             <span class="web">Web</span>Studio
           </a>
+          <button
+            type="button"
+            class="header-burger js-open-menu"
+            aria-label="button for oppen mobile menu"
+          >
+            <svg class="icon-menu" width="40" height="40">
+              <use href="./images/icons/icons.svg#menu"></use>
+            </svg>
+          </button>
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="site-nav-link active-link"
-                >Studio</a
-              >
+              <a href="./index.html" class="site-nav-link current">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="site-nav-link current"
+              <a href="./portfolio.html" class="site-nav-link active-link"
                 >Portfolio</a
               >
             </li>
@@ -378,5 +385,96 @@
         </div>
       </div>
     </footer>
+
+    <div class="mobile-menu js-menu-container">
+      <button
+        type="button"
+        class="mobile-menu-close-btn js-close-menu"
+        aria-label="button for close mobile menu"
+      >
+        <svg width="8" height="8">
+          <use href="./images/icons/icons.svg#icon-close-black"></use>
+        </svg>
+      </button>
+
+      <ul>
+        <li class="mobile-nav-item">
+          <a href="./index.html" class="mobile-nav-link">Studio</a>
+        </li>
+        <li class="mobile-nav-item">
+          <a href="./portfolio.html" class="mobile-nav-link">Portfolio</a>
+        </li>
+        <li class="mobile-nav-item">
+          <a href="#" class="mobile-nav-link">Contacts</a>
+        </li>
+      </ul>
+
+      <div>
+        <ul class="mobile-address">
+          <li>
+            <a href="tel:+110001111111" class="mobile-menu-link phone"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="mobile-menu-link mail"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-icon-list">
+          <li class="mobile-media-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferer"
+              aria-label="link to instagram"
+            >
+              <svg width="24" height="24" class="mobile-social-icon">
+                <use href="./images/icons/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-media-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferer"
+              aria-label="link to twitter"
+            >
+              <svg width="24" height="24" class="mobile-social-icon">
+                <use href="./images/icons/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-media-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferer"
+              aria-label="link to facebook"
+            >
+              <svg width="24" height="24" class="mobile-social-icon">
+                <use href="./images/icons/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-media-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferer"
+              aria-label="link to linkedin"
+            >
+              <svg width="24" height="24" class="mobile-social-icon">
+                <use href="./images/icons/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
