--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,12 @@
           </button>
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="site-nav-link current">Studio</a>
+              <a href="./index.html" class="site-nav-link active-link"
+                >Studio</a
+              >
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="site-nav-link active-link"
+              <a href="./portfolio.html" class="site-nav-link current"
                 >Portfolio</a
               >
             </li>
